<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">PSG ITECH</string>
    <string name="action_timeline">Timeline</string>
    <string name="action_chat">Chat</string>
    <string name="action_groupmail">Groupmail</string>
    <string name="action_photos">Photos</string>
    <string name="action_settings">Settings</string>
    <string name="content_description">content description</string>
    <string name="view_gallery">View Gallery</string>
    <string name="url_intercept_schema">contentful-gallery</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="intro_message">
        <![CDATA[

        This chat feature alows you to send messages between two connected devices over Bluetooth
        1.Turn on the Bluetooth connection
        2.Pair the two devices

        ]]>
    </string>
    <string name="review">Review</string>
    <string name="geo_status_searching">Waiting GPS &#8230;</string>
    <string name="geo_status_found">Location found</string>
    <string name="geo_status_location">%1$s \n(%2$s)</string>
    <string-array name="image_photo_sources">
        <item>Pick from gallery</item>
        <item>Capture new photo</item>
    </string-array>
    <string name="logout">Logout</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit order</string>
    <string name="submit_confirm_message">Take a screenshot of the REVIEW PAGE and attach it with the email</string>
    <string name="submit_confirm_button">Place order</string>
    <string name="label_your_name">Name</string>
    <string name="hint_your_name">Fill your name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_email">Fill your email</string>
    <string name="home">Home</string>
    <string name="add_course">Add Course:</string>
    <string name="lbl_course_title">Course Title:</string>
    <string name="lbl_dept_abr">Department Abbreviation:</string>
    <string name="lbl_course_number">Course Number:</string>
    <string name="lbl_teacher_name">Teacher Name:</string>
    <string name="lbl_credit_hours">Credit Hours:</string>
    <string name="lbl_grading_style">Grading Style:</string>
    <string name="lbl_percentage">Percentage</string>
    <string name="lbl_points">Points</string>
    <string name="lbl_assignment_types">Assignment Types:</string>
    <string name="none">none</string>
    <string name="lbl_add_assignment_type">Add Assignment Type</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="lblAddAssignmentType">Add Assignment Type for </string>
    <string name="empty">null</string>
    <string name="colon">:</string>
    <string name="lName">Name:</string>
    <string name="lWeight">Weight:</string>
    <string name="lPercent">%</string>
    <string name="gradingscale">"Grading Scale for "</string>
    <string name="scale_message">Leave field blank if letter grade is not applicable to your institution\'s grading system.</string>
    <string name="percent_and_up">% and up</string>
    <string name="a">A </string>
    <string name="a_minus">A- </string>
    <string name="b_plus">B+ </string>
    <string name="b">B </string>
    <string name="b_minus">B- </string>
    <string name="c_plus">C+ </string>
    <string name="c">C </string>
    <string name="c_minus">C- </string>
    <string name="d_plus">D+ </string>
    <string name="d">D </string>
    <string name="d_minus">D- </string>
    <string name="scale_setup">Grading Scale: </string>
    <string name="set_up">Set Up</string>
    <string name="lPoints">points</string>
    <string name="new_course">new course</string>
    <string name="lbl_courses">Courses:</string>
    <string name="lbl_add_course_button">Add Course</string>
    <string name="lbl_home_button">Home</string>
    <string name="add_assignment_type">Add Assignment Type</string>
    <string name="back">Back</string>
    <string name="lbl_add_grade">Add Grade</string>
    <string name="btn_send">Send</string>
    <string name="txt_hint">Type your message</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="dialog_general_error_title">Oops, something went wrong…</string>
    <string name="dialog_general_error_message">Check your network connection and try again.</string>
    <string name="dialog_unauthorized_error_message">Server returned 401 (unauthorized). Double check your space ID and access token.</string>
    <string name="action_about">About</string>
    <string name="about_btn_faq">FAQ</string>
    <string name="about_btn_feedback">Send Feedback</string>
    <string name="about_btn_contact">Contact</string>
    <string name="about_btn_license">Licensing Information</string>
    <string name="url_faq" formatted="false">https://support.contentful.com/hc/en-us/</string>
    <string name="url_feedback" formatted="false">https://support.contentful.com/hc/en-us/requests/new/</string>
    <string name="url_contact" formatted="false">https://support.contentful.com/hc/en-us/requests/new/</string>
    <string name="url_licensing" formatted="false">http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="gallery_photo_hero">gallery_photo_hero</string>
    <string name="title_activity_secondpage">Sign in</string>
    <string name="title_main_activity">Chat</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="compose_email">Compose Email</string>
    <string name="hello">Hello World, ActivityMain!</string>
    <string name="title_logo">NATIONAL GEOGRAPHIC</string>
    <string name="btn_skip_intro">SKIP INTRO</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="action_gcm_register">GCM Register</string>
    <string name="action_gcm_unregister">GCM Unregister</string>
    <string name="username">Username</string>
    <string name="login_submit">Join the Chat!</string>
    <string name="enter_new_channel">Enter new channel:</string>
    <string name="send_message">Send a message...</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="here_now">Here Now:</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>
    <string name="error_connect">Failed to connect</string>
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="title_edit_notes_activity">Note</string>
    <string name="no_notes_text">Press \'+\' to add new note</string>
    <string name="note_title">Title</string>
    <string name="note_body">Note</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string-array name="colourNames">
        <item>Blue</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>White</item>
    </string-array>
    <string-array name="fontSizeNames">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="action_search">Search</string>
    <string name="action_rate_app">Rate app</string>
    <string name="action_backup">Backup notes</string>
    <string name="action_restore">Restore notes</string>
    <string name="action_note_colour">Note colour</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_selected_number">Selected</string>
    <string name="action_font_size">Note font size</string>
    <string name="action_hide_body">Hide note body in list</string>
    <string name="action_show_body">Show note body in list</string>
    <string name="dialog_delete">Selected notes will be deleted!</string>
    <string name="dialog_note_colour">Change note colour</string>
    <string name="dialog_save_changes">Save changes?</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_notifications">Notifications</string>
</resources>